# smash

./: .gitignore  CONFIGURATION.md  Cargo.toml  README.md
crates/smash-config/: Cargo.toml
crates/smash-config/src/: config.rs  error.rs  lib.rs  load.rs  merge.rs  validate.rs
crates/smash-core/: Cargo.toml
crates/smash-core/src/: buffer.rs  cursor.rs  edit.rs  encoding.rs  error.rs  fuzzy_finder.rs  lib.rs  logging.rs  message.rs  position.rs  recovery.rs  search.rs  selection.rs  undo.rs
crates/smash-dap/: Cargo.toml
crates/smash-dap/src/: breakpoint.rs  capabilities.rs  client.rs  error.rs  lib.rs  protocol.rs  session.rs  transport.rs
crates/smash-input/: Cargo.toml
crates/smash-input/src/: command.rs  default_keymap.rs  emacs_keymap.rs  error.rs  event.rs  keymap.rs  lib.rs  resolver.rs  vim_keymap.rs
crates/smash-lsp/: Cargo.toml
crates/smash-lsp/src/: client.rs  diagnostics.rs  dispatcher.rs  error.rs  lib.rs  registry.rs  transport.rs  types.rs
crates/smash-platform/: Cargo.toml
crates/smash-platform/src/: clipboard.rs  error.rs  lib.rs  paths.rs  system_info.rs
crates/smash-syntax/: Cargo.toml
crates/smash-syntax/src/: error.rs  highlight.rs  language.rs  lib.rs  regex_highlighter.rs  scope.rs
crates/smash-terminal/: Cargo.toml
crates/smash-terminal/src/: error.rs  grid.rs  hyperlink.rs  input.rs  lib.rs  pane.rs  parser.rs  pty.rs
crates/smash-tui/: Cargo.toml
crates/smash-tui/src/: backend.rs  cell.rs  error.rs  lib.rs  pane.rs  renderer.rs  screen.rs  style.rs  theme.rs  viewport.rs
doc/: coding-rules.md
doc/design/: 01-smash-core-design.md  01-smash-core-test-design.md  02-smash-platform-design.md  02-smash-platform-test-design.md  03-smash-config-design.md  03-smash-config-test-design.md  04-smash-input-design.md  04-smash-input-test-design.md  05-smash-syntax-design.md  05-smash-syntax-test-design.md  06-smash-tui-design.md  06-smash-tui-test-design.md  07-smash-lsp-design.md  07-smash-lsp-test-design.md  08-smash-terminal-design.md  08-smash-terminal-test-design.md  09-smash-dap-design.md  09-smash-dap-test-design.md  10-smash-collab-design.md  10-smash-collab-test-design.md  11-smash-remote-design.md  11-smash-remote-test-design.md  12-smash-plugin-design.md  12-smash-plugin-test-design.md
doc/requirements/: design-plan.md  detail-requirements.md  smash-requirements.md
src/: backend.rs  editor.rs  lsp_task.rs  lsp_types.rs  main.rs
src/app/: commands.rs  lsp.rs  mod.rs  render.rs
tests/: emacs_override_test.rs
