[package]
name = "smash-config"
version.workspace = true
edition.workspace = true

[dependencies]
smash-platform = { path = "../smash-platform" }
serde = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"
