[package]
name = "smash-tui"
version.workspace = true
edition.workspace = true

[dependencies]
smash-core = { path = "../smash-core" }
smash-syntax = { path = "../smash-syntax" }
smash-config = { path = "../smash-config" }
crossterm = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
